--- a/index.html
+++ b/index.html
@@ -3,152 +3,181 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>M. HASHEM | إدارة مشاريع ذكية</title>
-    
-    <link href="https://fonts.googleapis.com/css2?family=Alexandria:wght@300;400;700&display=swap" rel="stylesheet">
+    <title>ليا محمد هاشم | Senior Full Stack Developer</title>
+
+    <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <style>
-        :root {
-            --bg: #030303;
-            --accent: #d4af37;
-            --card-bg: #0d0d0d;
-            --border: rgba(212, 175, 55, 0.1);
-            --text-sub: #999;
+        @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic:wght@100;300;400;600&family=Plus+Jakarta+Sans:wght@200;800&display=swap');
+        :root { --b:#000; --w:#fff; }
+        body {
+            font-family:'IBM Plex Sans Arabic',sans-serif;
+            background:var(--b);
+            color:var(--w);
+            overflow-x:hidden;
         }
-
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { 
-            background: var(--bg); color: #fff; 
-            font-family: 'Alexandria', sans-serif; 
-            overflow-x: hidden;
-        }
-
-        /* --- خلفية متحركة ناعمة --- */
-        #glow {
-            position: fixed; width: 600px; height: 600px;
-            background: radial-gradient(circle, rgba(212, 175, 55, 0.05) 0%, transparent 70%);
-            z-index: -1; filter: blur(80px); pointer-events: none;
-        }
-
-        section { padding: 100px 8%; display: flex; align-items: center; }
-        .container { width: 100%; max-width: 1200px; margin: 0 auto; }
-        .reveal { opacity: 0; transform: translateY(30px); }
-
-        h1 { font-size: clamp(2.5rem, 8vw, 6rem); font-weight: 700; line-height: 1.1; margin-bottom: 20px; }
-        h2 { color: var(--accent); font-size: 2rem; margin-bottom: 20px; }
-
-        /* --- Bento Grid --- */
-        .bento-grid { display: grid; grid-template-columns: repeat(12, 1fr); gap: 20px; }
-        .bento-card { 
-            grid-column: span 4; background: var(--card-bg); border: 1px solid var(--border);
-            padding: 40px; border-radius: 24px; transition: 0.4s;
-        }
-        .bento-card:hover { border-color: var(--accent); transform: translateY(-5px); }
-        .span-8 { grid-column: span 8; }
-        .span-12 { grid-column: span 12; }
-
-        .tag { color: var(--accent); font-size: 0.8rem; letter-spacing: 2px; display: block; margin-bottom: 10px; font-weight: 300; }
-        p { color: var(--text-sub); font-size: 1.1rem; line-height: 1.6; }
-
-        .btn { 
-            display: inline-block; padding: 18px 40px; background: var(--accent); color: #000; 
-            border-radius: 50px; text-decoration: none; font-weight: 700; margin-top: 30px;
-        }
-
-        @media (max-width: 992px) { .bento-card { grid-column: span 12; } }
+        .font-eng{font-family:'Plus Jakarta Sans',sans-serif;}
+        .noise{position:fixed;inset:0;background:url('https://grainy-gradients.vercel.app/noise.svg');opacity:.04;pointer-events:none;z-index:200;}
+        .grid-bg{position:fixed;inset:0;background-image:radial-gradient(rgba(255,255,255,.03) 1px,transparent 1px);background-size:50px 50px;z-index:-1;}
+        .card-p{border:1px solid rgba(255,255,255,.05);background:rgba(255,255,255,.01);transition:.5s cubic-bezier(.2,1,.3,1);}
+        .card-p:hover{border-color:rgba(255,255,255,.4);background:rgba(255,255,255,.05);}
+        #cursor{width:8px;height:8px;background:#fff;position:fixed;border-radius:50%;pointer-events:none;z-index:1000;mix-blend-difference:exclusion;}
+        .section-num{font-family:'Plus Jakarta Sans';font-size:10px;opacity:.2;letter-spacing:.5em;}
     </style>
 </head>
+
 <body>
 
-    <div id="glow"></div>
+<div class="noise"></div>
+<div class="grid-bg"></div>
+<div id="cursor"></div>
 
-    <section>
-        <div class="container reveal">
-            <span class="tag">M. HASHEM | الإدارة الذكية</span>
-            <h1>مشروعك محتاج<br><span style="color: var(--accent);">سيستم مش مجرد مدير.</span></h1>
-            <p style="max-width: 650px;">محمد هاشم.. بنقل مشروعك من "الورقة والقلم" والعشوائية، لنظام رقمي ذكي بيراقب كل كبيرة وصغيرة عشان تضمن مكسبك وتوفر وقتك.</p>
-            <a href="#contact" class="btn">احجز استشارتك مجاناً</a>
+<nav class="fixed top-0 w-full z-[150] px-8 py-6 flex justify-between items-center bg-black/50 backdrop-blur-xl border-b border-white/5">
+    <div class="font-eng font-bold tracking-tighter text-xl">HASHMGR.DEV</div>
+    <div class="hidden md:flex gap-8 text-[9px] font-eng tracking-[0.4em] opacity-40 uppercase">
+        <a href="#about">About</a>
+        <a href="#stack">Stack</a>
+        <a href="#work">Work</a>
+        <a href="#faq">FAQ</a>
+    </div>
+</nav>
+
+<main class="w-full px-6 max-w-6xl mx-auto pt-32">
+
+<!-- HERO -->
+<section class="min-h-[80vh] flex flex-col justify-center">
+    <span class="section-num mb-6 block">01 // INTRO</span>
+    <h1 class="text-6xl md:text-[9rem] font-bold leading-[0.9] tracking-tighter mb-10">
+        أُطوّر أنظمة <br><span class="opacity-30 italic">تعتمد عليها.</span>
+    </h1>
+    <p class="text-xl md:text-3xl font-light text-zinc-400 max-w-3xl leading-relaxed">
+        ليا محمد هاشم — Senior Full Stack Developer، أعمل على بناء تطبيقات ويب
+        متكاملة من الفكرة وحتى الإطلاق مع تركيز قوي على الأداء والأمان.
+    </p>
+</section>
+
+<!-- ABOUT -->
+<section id="about" class="py-32 border-t border-white/5">
+    <div class="grid md:grid-cols-2 gap-20">
+        <span class="section-num">02 // PHILOSOPHY</span>
+        <div class="text-2xl md:text-4xl font-light leading-snug text-zinc-200">
+            البرمجة الجيدة لا تُقاس بعدد الأسطر،
+            بل بقدرتها على الاستمرار والتوسع مع متطلبات العمل.
         </div>
-    </section>
+    </div>
+</section>
 
-    <section>
-        <div class="container bento-grid">
-            <div class="bento-card span-8 reveal">
-                <span class="tag">الرحلة</span>
-                <h2>بدأت من "الكود" لحد "الإدارة"</h2>
-                <p>أنا في الأصل مبرمج (Backend & Frontend)، يعني فاهم إزاي الأنظمة بتتبني من الصفر. النهاردة بستخدم الخبرة دي في **إدارة المشاريع**؛ عشان أضمن لك إن التكنولوجيا تخدم البيزنس بتاعك صح مش مجرد شكل.</p>
-            </div>
-            
-            <div class="bento-card reveal" style="background: var(--accent); color: #000;">
-                <span class="tag" style="color: #000;">الأدوات</span>
-                <h2 style="color: #000;">أسلحتي</h2>
-                <p style="color: #000; font-weight: 600;">
-                    • Primavera P6<br>
-                    • Power BI<br>
-                    • SQL Data<br>
-                    • Node.js & React
-                </p>
-            </div>
+<!-- STACK -->
+<section id="stack" class="py-32">
+    <span class="section-num mb-16 block">03 // TECH STACK</span>
+    <div class="grid grid-cols-2 md:grid-cols-5 gap-10 opacity-30 text-center font-eng text-[10px] tracking-widest">
+        <div>NEXT.JS</div>
+        <div>NODE.JS</div>
+        <div>TYPESCRIPT</div>
+        <div>POSTGRESQL</div>
+        <div>DOCKER</div>
+    </div>
+</section>
 
-            <div class="bento-card span-4 reveal">
-                <h2>ليه أنا؟</h2>
-                <p>لأني فاهم لغة المبرمجين ولغة أصحاب المشاريع. هكون "المترجم" اللي بيضمن إن السيستم شغال لمصلحتك.</p>
-            </div>
+<!-- SERVICES -->
+<section class="py-32 grid md:grid-cols-2 gap-10 border-y border-white/5">
+    <div class="card-p p-16">
+        <h3 class="text-2xl font-bold italic mb-6">تطوير الواجهات</h3>
+        <p class="text-zinc-500 font-light text-sm">
+            بناء واجهات مستخدم سريعة، متجاوبة،
+            وقابلة للتوسع مع تجربة استخدام سلسة.
+        </p>
+    </div>
+    <div class="card-p p-16">
+        <h3 class="text-2xl font-bold italic mb-6">تطوير الأنظمة الخلفية</h3>
+        <p class="text-zinc-500 font-light text-sm">
+            تصميم APIs، إدارة قواعد البيانات،
+            وبناء أنظمة تتحمل الضغط والنمو المستقبلي.
+        </p>
+    </div>
+</section>
 
-            <div class="bento-card span-8 reveal">
-                <h2>إيه اللي هقدمهولك؟</h2>
-                <p>تقارير لحظية لمشروعك، مراقبة دقيقة للميزانية، وحماية جدولك الزمني من أي تأخير مفاجئ.</p>
-            </div>
+<!-- WORK -->
+<section id="work" class="py-32">
+    <span class="section-num mb-16 block">04 // PROJECT</span>
+    <div class="group relative overflow-hidden card-p aspect-video rounded-sm">
+        <img src="https://images.unsplash.com/photo-1551288049-bbbda536339a?q=80&w=2000&auto=format&fit=crop"
+             class="w-full h-full object-cover grayscale opacity-20 group-hover:scale-105 transition-all duration-1000">
+        <div class="absolute inset-0 p-12 flex flex-col justify-end bg-gradient-to-t from-black to-transparent">
+            <h3 class="text-4xl font-bold mb-4">نظام إدارة أعمال</h3>
+            <p class="text-zinc-400 max-w-xl text-sm font-light">
+                منصة ويب متكاملة لإدارة العملاء والعمليات والتقارير.
+            </p>
         </div>
-    </section>
+    </div>
+</section>
 
-    <section>
-        <div class="container">
-            <h2 style="text-align: center; margin-bottom: 50px;">مشاريع غيرت الواقع</h2>
-            <div class="bento-grid">
-                <div class="bento-card span-6 reveal">
-                    <h3>أتمتة الشركات</h3>
-                    <p>حولت إدارة يدوية بالكامل لنظام رقمي بيوفر 20% من المصاريف الضايعة.</p>
-                </div>
-                <div class="bento-card span-6 reveal">
-                    <h3>داشبورد اتخاذ القرار</h3>
-                    <p>بنيت لوحة تحكم تخلي صاحب المشروع يشوف أداء شغله لحظة بلحظة من موبايله.</p>
-                </div>
-            </div>
+<!-- WORKFLOW -->
+<section class="py-32 text-center border-b border-white/5">
+    <span class="section-num mb-16 block">05 // WORKFLOW</span>
+    <div class="grid md:grid-cols-3 gap-16">
+        <div>
+            <h4 class="font-bold italic text-lg mb-4">التحليل</h4>
+            <p class="text-zinc-600 text-xs">فهم المتطلبات قبل كتابة أي كود.</p>
         </div>
-    </section>
-
-    <section>
-        <div class="container bento-grid">
-            <div class="bento-card span-12 reveal" style="text-align: center;">
-                <h2>مفيش مجال للصدفة</h2>
-                <p style="max-width: 800px; margin: 0 auto;">حقك كصاحب مشروع تعرف الحقيقة. بنقدم لك بيانات واضحة وصادقة بتعرفك المشروع رايح فين بالظبط، عشان تاخد قرارك وأنت مطمن.</p>
-            </div>
+        <div>
+            <h4 class="font-bold italic text-lg mb-4">التطوير</h4>
+            <p class="text-zinc-600 text-xs">تنفيذ الحل باستخدام أفضل الممارسات.</p>
         </div>
-    </section>
-
-    <section id="contact" style="text-align: center;">
-        <div class="container reveal">
-            <h2 style="font-size: 3rem;">جاهز نكبر مشروعك؟</h2>
-            <p>لو بتدور على إدارة احترافية تريح بالك، تواصل معايا دلوقتي.</p>
-            <a href="mailto:h@hashmger.com" class="btn">ارسل رسالة الآن</a>
+        <div>
+            <h4 class="font-bold italic text-lg mb-4">التحسين</h4>
+            <p class="text-zinc-600 text-xs">تحسين الأداء والمتابعة المستمرة.</p>
         </div>
-    </section>
+    </div>
+</section>
 
-    <script>
-        // إضاءة تتبع الماوس
-        const glow = document.getElementById('glow');
-        document.addEventListener('mousemove', (e) => {
-            gsap.to(glow, { x: e.clientX - 300, y: e.clientY - 300, duration: 1.5 });
-        });
+<!-- FAQ -->
+<section id="faq" class="py-32 max-w-2xl mx-auto">
+    <span class="section-num text-center mb-16 block">06 // FAQ</span>
+    <details class="py-6 border-b border-white/5">
+        <summary class="font-bold italic cursor-pointer">هل تقدم استشارات تقنية؟</summary>
+        <p class="mt-4 text-zinc-600 text-xs">
+            نعم، أقدّم استشارات للمشاريع الناشئة واختيار البنية المناسبة.
+        </p>
+    </details>
+    <details class="py-6 border-b border-white/5">
+        <summary class="font-bold italic cursor-pointer">ما مدة تنفيذ المشروع؟</summary>
+        <p class="mt-4 text-zinc-600 text-xs">
+            تختلف حسب الحجم، وغالبًا من 3 إلى 6 أسابيع.
+        </p>
+    </details>
+</section>
 
-        // أنيميشن الظهور
-        gsap.registerPlugin(ScrollTrigger);
-        document.querySelectorAll('.reveal').forEach(el => {
-            gsap.to(el, { opacity: 1, y: 0, duration: 1, scrollTrigger: { trigger: el, start: "top 90%" } });
-        });
-    </script>
+<!-- CONTACT -->
+<section id="contact" class="py-32 text-center">
+    <span class="section-num mb-16 block">07 // CONTACT</span>
+    <h2 class="text-6xl md:text-[8rem] font-bold tracking-tighter mb-16 font-eng">
+        LET’S BUILD.
+    </h2>
+    <a href="mailto:hello@hashmgr.dev"
+       class="text-2xl md:text-5xl font-light font-eng border-b border-white/10 hover:border-white transition pb-4">
+        hello@hashmgr.dev
+    </a>
+</section>
+
+<footer class="py-12 border-t border-white/5 flex justify-between items-center text-[8px] font-eng tracking-[0.4em] opacity-20 uppercase">
+    <span>HASHMGR.DEV</span>
+    <span>Senior Full Stack Developer</span>
+</footer>
+
+</main>
+
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+    AOS.init({duration:1200,once:true});
+    const cursor=document.getElementById('cursor');
+    document.addEventListener('mousemove',e=>{
+        gsap.to(cursor,{x:e.clientX,y:e.clientY,duration:.1});
+    });
+</script>
+
 </body>
 </html>
