--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ليا محمد هاشم | Senior Full Stack Developer</title>
+    <title> محمد هاشم | Senior Full Stack Developer</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
@@ -54,7 +54,7 @@
         أُطوّر أنظمة <br><span class="opacity-30 italic">تعتمد عليها.</span>
     </h1>
     <p class="text-xl md:text-3xl font-light text-zinc-400 max-w-3xl leading-relaxed">
-        ليا محمد هاشم — Senior Full Stack Developer، أعمل على بناء تطبيقات ويب
+         محمد هاشم — Senior Full Stack Developer، أعمل على بناء تطبيقات ويب
         متكاملة من الفكرة وحتى الإطلاق مع تركيز قوي على الأداء والأمان.
     </p>
 </section>
